[gd_scene load_steps=5 format=3 uid="uid://be3u0fxqmknt4"]

[ext_resource type="Script" uid="uid://j2uljkef88ht" path="res://scenes/ui/menus/label_button.gd" id="1_ebgpj"]

[sub_resource type="Animation" id="Animation_ebgpj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8howg"]
resource_name = "pulse"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_748xv"]
_data = {
&"RESET": SubResource("Animation_ebgpj"),
&"pulse": SubResource("Animation_8howg")
}

[node name="LabelButton" type="Button"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1, 24)
offset_right = 8.0
offset_bottom = 24.0
pivot_offset = Vector2(4, 12)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ebgpj")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -12.0
offset_right = 0.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0.5, 12)
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_748xv")
}

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
